<resources>
    <string name="app_name">Covital</string>
    <string name="an_error_occured">Sorry, it seems there is something wrong, try again later.</string>
    <string name="readme_filename">Readme.md</string>
    <string name="loading_content">Loading content…</string>
    <string name="login">Log in</string>
    <string name="next">Next</string>
    <string name="dashboard">Dashboard</string>
    <string name="measurements">Measurements</string>

    <string name="measure_screen_title">Place your finger in the camera</string>
    <string name="measure_screen_title_permission">Grant permissions</string>
    <string name="measure_screen_description">1. Place your index finger fully covering the rear camera of the phone.
    \n\n2. At the same time press the button using another finger until you see oxygen saturation levels</string>
    <string name="measure_screen_description_permission">Camera permission is needed to conduct the test</string>
    <string name="measure_screen_button">Press here</string>
    <string name="measure_screen_button_permission">Request camera permission</string>
    <string name="measure_screen_error">There has been an error, please try again.</string>

    <string name="measurement_result_screen_title">Successful reading</string>
    <string name="measurement_result_screen_description">This is the result of your oxygen saturation level</string>
    <string name="measurement_result_screen_value">%d%%</string>
    <string name="measurement_result_screen_button">Next</string>

    <string name="improve_measurement_screen_title">Help us improve our measurements</string>
    <string name="improve_measurement_screen_oximeter_reading">If a pulse oximeter device is available, please enter its measurement for research validation</string>
    <string name="improve_measurement_screen_oximeter_reading_hint">O2</string>
    <string name="improve_measurement_screen_oximeter_bpm_hint">Heart rate</string>
    <string name="improve_measurement_screen_oximeter_model">What oximeter model was used?</string>
    <string name="improve_measurement_screen_oximeter_model_hint">Oximeter model</string>
    <string name="improve_measurement_screen_button">Send info</string>

    <string name="medical_diagnoses">Medical Diagnoses</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="overview">Overview</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="diagnose">Diagnose</string>
    <string name="toggle_history_open">Toggle History Open</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about_covital">About CoVital</string>
    <string name="send_app_feedback">Send App Feedback</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>
    <string name="how_was_your_experience_with_the_app_today">How was your experience with the app today?</string>
    <string name="send_us_your_feedback">Send us your feedback</string>
    <string name="very_dissatisfied">Very Dissatisfied</string>
    <string name="dissatisfied">Dissatisfied</string>
    <string name="meh">Meh</string>
    <string name="satisfied">Satisfied</string>
    <string name="very_satisfied">Very Satisfied</string>
    <string name="what_would_you_like_to_share_with_us">What would you like to share with us?</string>
    <string name="send">Send</string>
    <string name="by_creating_an_account_i_accept_covital_s_nterms_of_service">By creating an account, I accept CoVital\'s \n<u>Terms of Service</u></string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="blood_oxygen">Hg O₂</string>
    <string name="oxygen">O₂</string>
    <string name="gender">Gender</string>
    <string name="general_questions">General Questions</string>
    <string name="this_information_will_be_used_for_the_sole_purpose_of">This information will be used for the sole purpose of…</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="year_of_birth">Year of Birth</string>
    <string name="chronic_lung_issues">• Chronic Lung Issues</string>
    <string name="cardiovascular_disease">• Cardiovascular Disease</string>
    <string name="diabetes">• Diabetes</string>
    <string name="cancer">• Cancer</string>
    <string name="autoimmune_disease">• Autoimmune Disease</string>
    <string name="are_you_diagnosed_with">Are you Diagnosed with:</string>
    <string name="do_you_use_medicine_that_suppresses_your_immune_system">Do You Use Medicine That Suppresses Your Immune System?</string>
    <string name="bpm">bpm</string>
    <string name="before_we_get_started">Before we get started</string>
    <string name="the_answers_and_data_you_provide">The answers and data you provide helps us improve our ability to measure your blood oxygen saturation and heart rate.</string>
    <string name="they_will_not_be_shared">They will not be shared with any outside companies or others without your permission. All questions are optional.</string>
    <string name="explain_optional_questions"><![CDATA[In order to record your blood oxgyen levels & messure your heart rate. We need you to answer the following optional questions.]]></string>
    <string name="your_personal_info">Your Personal Info</string>
    <string name="skip">Skip</string>
    <string name="no_thanks">No Thanks</string>
    <string name="use_you_camera">Use you Camera</string>
    <string name="need_camera_to_monitor_oxygen_levels">To record your blood oxygen levels. We need you to allow CoVital to use your camera.</string>
    <string name="no_intent_handler">You do not have %1$s installed</string>
    <string name="add_new_measurement">Add New Measurement</string>
</resources>
