<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="org.covital.measurements.presentation.MeasurementsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/general_screen_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/improve_measurement_screen_title"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/improve_measurement_screen_oximeter_reading"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="4dp"
                android:hint="@string/improve_measurement_screen_oximeter_reading_hint"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="19sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginVertical="16dp"
                android:hint="@string/improve_measurement_screen_oximeter_bpm_hint"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bpm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="19sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginTop="16dp"
            android:text="@string/improve_measurement_screen_oximeter_model"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:hint="@string/improve_measurement_screen_oximeter_model_hint"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="19sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/improve_measurement_screen_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="24dp"
            android:padding="16dp"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="20dp"
            />

    </LinearLayout>


</layout>