<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.covital.measurements.presentation.MeasureViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/general_screen_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measure_screen_title"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/measure_screen_description"
             />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measure_screen_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="24dp"
            android:padding="16dp"
            android:onClick="@{(view) -> viewModel.onButtonClick()}"
            style="@style/Widget.MaterialComponents.Button"
            android:enabled="@{viewModel.buttonEnabled}"
            app:cornerRadius="20dp"
            />


    </LinearLayout>


</layout>