<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="measurement"
            type="String" />
        <variable
            name="viewModel"
            type="org.covital.measurements.presentation.MeasurementsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/general_screen_margin"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement_result_screen_title"
            android:textSize="23sp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:text="@string/measurement_result_screen_description"
             />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="56sp"
            android:padding="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@{measurement}"
            android:background="@drawable/result_background"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement_result_screen_button"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginVertical="24dp"
            android:onClick="@{() -> viewModel.onResultFinished()}"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="20dp"
            />

    </LinearLayout>


</layout>