<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="org.covital.feedback.presentation.FeedbackViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_surface"
        >

        <TextView
            android:id="@+id/feedback_title"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/send_us_your_feedback"
            android:onClick="@{(view) -> viewModel.onBackTapped()}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableStart="@drawable/ic_arrow_black_large"
            android:drawablePadding="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            style="@style/AppTheme.HeadlineSurface"
            />

        <EditText
            android:id="@+id/feedback_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@{viewModel.feedback}"
            android:hint="@string/what_would_you_like_to_share_with_us"
            app:layout_constraintTop_toBottomOf="@id/feedback_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/send_feedback_button"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:importantForAutofill="no"
            style="@style/AppTheme.EditText"
            />

        <Button
            android:id="@+id/send_feedback_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            style="@style/AppTheme.Button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
